--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -341,6 +341,12 @@
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Mundo Supercontinental"
  pc_pd_supercontinent_desc: "Mundo rochoso de pastagens e desertos com uma atmosfera de nitrogênio-oxigênio, as placas tectônicas deste planeta estão atualmente no estado de um supercontinente. As áreas costeiras imediatas são exuberantes, mas grande parte do terreno interior é constituído por pastagens que lentamente se transformam em grandes desertos áridos."
  pc_pd_supercontinent_adj: "supercontinental"
