--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -138,6 +138,10 @@
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_supercontinent: "Mundo Supercontinental"
  pd_supercontinent_desc: "Este planeta possui atualmente um supercontinente devido às suas placas tectônicas. As áreas costeiras são exuberantes, enquanto o terreno interior transita de pastagens para grandes desertos áridos."
  pd_sinkhole: "Mundo Sumidouro"
