--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -138,6 +138,8 @@
  pd_turquoise_desc: "Dieser subtropische Graslandplanet ist übersät mit riesigen Vorkommen türkisfarbener Edelsteine, die fast überall auf seiner Oberfläche zu finden sind."
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_supercontinent: "Superkontinent Welt"
  pd_supercontinent_desc: "Aufgrund der Plattentektonik besteht auf diesem Planeten derzeit ein Superkontinent. Die Küstengebiete sind üppig bewachsen, während das Land im Landesinneren von Grasland zu großen, trockenen Wüsten übergeht."
  pd_sinkhole: "Senkloch Welt"
