--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -138,6 +138,8 @@
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_supercontinent: "초대륙 행성"
  pd_supercontinent_desc: "이 행성은 현재 판구조론으로 인해 초대륙을 형성하고 있습니다. 해안 지역은 울창한 반면 내륙 지형은 초원에서 거대한 건조 사막으로 전환됩니다."
  pd_sinkhole: "싱크홀 행성"
