--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -138,6 +138,8 @@
  pd_turquoise_desc: "Этот субтропический мир с травянистой растительностью усыпан огромными залежами бирюзы, которые встречаются почти повсюду на его поверхности."
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_supercontinent: "Суперконтинентальный мир"
  pd_supercontinent_desc: "В настоящее время тектонические плиты этой планеты образуют суперконтинент. Прибрежные земли полны пышной растительности, но большая часть внутренней местности представляет собой луга, которые постепенно переходят в большие засушливые пустыни."
  pd_sinkhole: "Карстовый мир"
