--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -112,6 +112,7 @@
  pdengine.96.dry_gaia_tidally_locked: "干燥气候"
  pdengine.96.cold_gaia_tidally_locked: "寒冷气候"
  pdengine.21.calcite: "$pc_pd_calcite$"
+ pdengine.21.monsoon: "$pc_pd_monsoon$"
  pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
  pdengine.21.moss: "$pc_pd_moss$"
  pdengine.21.ironsand: "$pc_pd_ironsand$"
