--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -264,6 +264,8 @@
  pd_cryovolcano_desc: "冰层下的水、氨及甲烷会从冰火山中喷发，营养物质也会一并到达地表，生命因而得以在此繁衍。"
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
  pd_ironsand: "$pc_pd_ironsand$"
