--- a/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
@@ -65,6 +65,7 @@
  pdengine.21.sandstone: "$pc_pd_sandstone$"
  pdengine.21.turquoise: "$pc_pd_turquoise$"
  pdengine.21.calcite: "$pc_pd_calcite$"
+ pdengine.21.monsoon: "$pc_pd_monsoon$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
