--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -355,6 +355,12 @@ trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_supercontinent: "Monde Supercontinent"
 pc_pd_supercontinent_desc: "Monde rocheux de prairies et de déserts avec une atmosphère à base d'azote et d'oxygène, les plaques tectoniques de cette planète se trouvent actuellement dans l'état d'un supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est constituée de prairies qui se transforment lentement en grands déserts arides."
 pc_pd_supercontinent_adj: "supercontinental"
