--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -354,6 +354,12 @@
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Superkontinent Welt"
  pc_pd_supercontinent_desc: "Felsige Welt aus Grasland und Wüsten mit einer Stickstoff-Sauerstoff-Atmosphäre. Die Plattentektonik dieses Planeten befindet sich derzeit im Zustand eines Superkontinents. Die unmittelbaren Küstengebiete sind üppig, aber ein Großteil des Landesinneren besteht aus Grasland, das sich langsam in große, trockene Wüsten verwandelt."
  pc_pd_supercontinent_adj: "superkontinental"
