--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
@@ -138,6 +138,8 @@
  pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
+ pd_monsoon: "$pc_pd_monsoon$"
+ pd_monsoon_desc: "$pc_pd_monsoon_desc$"
  pd_supercontinent: "Supercontinent World"
  pd_supercontinent_desc: "This planet currently has a supercontinent due to its plate tectonics. Coastal areas are lush, while inland terrain transitions from grasslands to large arid deserts."
  pd_sinkhole: "Sinkhole World"
