--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -354,6 +354,12 @@
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "초대륙 행성"
  pc_pd_supercontinent_desc: "대기가 질소와 산소로 조성되었으며 초원과 사막으로 구성된 암석형 행성입니다. 이 행성의 판구조학은 현재 초대륙의 상태에 있습니다. 가까운 해안 지역은 울창하지만 내륙 지형의 대부분은 초원이며, 서서히 건조한 사막으로 변해가고 있습니다."
  pc_pd_supercontinent_adj: "초대륙의"
