--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -354,6 +354,12 @@
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Świat superkontynentalny"
  pc_pd_supercontinent_desc: "Skalisty świat łąk i pustyń z atmosferą azotowo-tlenową, tektonika płyt tej planety znajduje się obecnie w stanie superkontynentu. Bezpośrednie obszary przybrzeżne są bujne, ale większość terenu śródlądowego to łąki, które powoli zamieniają się w duże, jałowe pustynie."
  pc_pd_supercontinent_adj: "superkontynentalny"
