--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -354,6 +354,18 @@
  mod_pc_pd_calcite_habitability: "Savannah Habitability"
  trait_pc_pd_calcite_preference: "Savannah Preference"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "Monsoon World"
+ pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
+ pc_pd_monsoon_adj: "sharded"
+ mod_pc_pd_monsoon_habitability: "Savannah Habitability"
+ trait_pc_pd_monsoon_preference: "Savannah Preference"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Суперконтинентальный мир"
  pc_pd_supercontinent_desc: "Каменистый мир с преобладанием лугов и сухих пустошей с азотно-кислородной атмосферой. В настоящее время тектонические плиты этой планеты образуют суперконтинент. Прибрежные земли полны пышной растительности, но большая часть внутренней местности представляет собой луга, которые постепенно переходят в большие засушливые пустыни."
  pc_pd_supercontinent_adj: "суперконтинентальная"
