update Chinese localisation for planet types

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -143,13 +143,6 @@
  mod_pc_pd_lilypad_habitability: "热带星球宜居性"
  trait_pc_pd_lilypad_preference: "热带星球偏好"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_obsidian: "Obsidian World"
- pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
-"
- pc_pd_obsidian_adj: "obsidian"
- mod_pc_pd_obsidian_habitability: "Tropical Habitability"
- trait_pc_pd_obsidian_preference: "Tropical Preference"
- trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "地热星球"
  pc_pd_geothermal_desc: "拥有氮氧大气层的寒冷冰封星球，有受到天然地热喷口加热的热带裂谷，打破了广袤的冰层。冰雪融水和喷口中袅袅的蒸汽构成了这里的水圈。"
  pc_pd_geothermal_adj: "地热"
@@ -354,12 +347,6 @@
  mod_pc_pd_ice_dunes_habitability: "极地星球宜居性"
  trait_pc_pd_ice_dunes_preference: "极地星球偏好"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_ferrospring: "Ferrosprings World"
- pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
- pc_pd_ferrospring_adj: "icey"
- mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
- trait_pc_pd_ferrospring_preference: "Arctic Preference"
- trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "风暴星球"
  pc_pd_storm_desc: "拥有氮氧大气层的寒冷岩石星球，此地拥有规模庞大的水圈。主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pc_pd_storm_adj: "风暴"
@@ -681,12 +668,6 @@
  mod_pc_pd_calcite_habitability: "草原星球宜居性"
  trait_pc_pd_calcite_preference: "草原星球偏好"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_monsoon: "Monsoon World"
- pc_pd_monsoon_desc: "A rocky world with a nitrogen-oxygen atmosphere. Seasonal circulation patterns drive intense monsoon systems across the surface, flooding vast plains before retreating into periods of dry heat."
- pc_pd_monsoon_adj: "sharded"
- mod_pc_pd_monsoon_habitability: "Savannah Habitability"
- trait_pc_pd_monsoon_preference: "Savannah Preference"
- trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryovolcano: "冰火山星球"
  pc_pd_cryovolcano_desc: "拥有氮氧大气层的寒冷岩石星球。冰层下的水、氨及甲烷会从冰火山中喷发，营养物质也会一并到达地表，生命因而得以在此繁衍。"
  pc_pd_cryovolcano_adj: "冰火山"
@@ -717,12 +698,6 @@
  mod_pc_pd_columnar_habitability: "海洋星球宜居性"
  trait_pc_pd_columnar_preference: "海洋星球偏好"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_tidepool: "Tidepool World"
- pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
- pc_pd_tidepool_adj: "shallowed"
- mod_pc_pd_tidepool_habitability: "Ocean Habitability"
- trait_pc_pd_tidepool_preference: "Ocean Preference"
- trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_taiga: "泰加林星球"
  pc_pd_taiga_desc: "有着氮氧大气的山地森林星球，水体活跃但温度极低。冬季漫长而寒冷，夏季短暂而凉爽。"
  pc_pd_taiga_adj: "山地"
@@ -746,3 +721,27 @@
  mod_pc_pd_craton_habitability: "高山星球宜居性"
  trait_pc_pd_craton_preference: "高山星球偏好"
  trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "潮池星球"
+ pc_pd_tidepool_desc: "被海洋覆盖的岩石星球，拥有氮氧大气和浅海环境。每一天，潮涨潮落都会留下大片潮池，形成充满活力的海滨生态系统，孕育了种类繁多的海洋生物。"
+ pc_pd_tidepool_adj: "浅滩"
+ mod_pc_pd_tidepool_habitability: "海洋星球宜居性"
+ trait_pc_pd_tidepool_preference: "海洋星球偏好"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "黑曜石星球"
+ pc_pd_obsidian_desc: "这是一颗拥有氮氧大气的湿润星球，热带浅海被广袤的黑曜石矿床环绕，顽强的草木在火山环境中广泛扎根。"
+ pc_pd_obsidian_adj: "黑曜石"
+ mod_pc_pd_obsidian_habitability: "热带星球宜居性"
+ trait_pc_pd_obsidian_preference: "热带星球偏好"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "含铁泉流星球"
+ pc_pd_ferrospring_desc: "拥有氮氧大气的寒冷岩石星球，地壳冰层因地热活动而布满裂隙。富含铁质沉积物的地下水层滋养着地表的泉水和湖泊，使水体呈现为与冰原格格不入的深红色。"
+ pc_pd_ferrospring_adj: "寒冰"
+ mod_pc_pd_ferrospring_habitability: "极地星球宜居性"
+ trait_pc_pd_ferrospring_preference: "极地星球偏好"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_monsoon: "季风星球"
+ pc_pd_monsoon_desc: "拥有氮氧大气层的岩石星球，其表面的季节性环流驱动着强烈的季风系统——季风来袭时会淹没广袤的平原，随后退去转入干热期。"
+ pc_pd_monsoon_adj: "尖石"
+ mod_pc_pd_monsoon_habitability: "草原星球宜居性"
+ trait_pc_pd_monsoon_preference: "草原星球偏好"
+ trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
