--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
@@ -22,8 +22,8 @@
  district_arcology_pd_trade: "Commercial Arcology"
  district_arcology_pd_trade_plural: "Commercial Arcologie"
  district_arcology_pd_trade_desc: "Great commercial spires and towers rise towards the sky, their imposing forms blotting out the light."
- district_pd_arcology_naval: "Logisitcal Arcology"
- district_pd_arcology_naval_plural: "Logisitcal Arcologies"
+ district_pd_arcology_naval: "Logistical Arcology"
+ district_pd_arcology_naval_plural: "Logistical Arcologies"
  district_pd_arcology_naval_desc: "Office stacks and situation rooms optimize navy operations to maximum efficiency."
 
 #Jobs
@@ -138,8 +138,8 @@
  district_pd_hive_industrial: "Industiral District"
  district_pd_hive_industrial_plural: "Industiral Districts"
  district_pd_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials."
- district_pd_gestalt_naval: "Logisitcal District"
- district_pd_gestalt_naval_plural: "Logisitcal Districts"
+ district_pd_gestalt_naval: "Logistical District"
+ district_pd_gestalt_naval_plural: "Logistical Districts"
  district_pd_gestalt_naval_desc: "The drones here optimize navy operations to maximum efficiency."
  district_pd_gestalt_research: "Research District"
  district_pd_gestalt_research_plural: "Research Districts"
@@ -172,4 +172,74 @@
  decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
  decision_pd_miltary_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
  decision_pd_commercial_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$- §Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+
+ ###4.0 and Beyond
+ ##Garden Arc
+ #Tooltip
+ decision_garden_arcology_project_effects: "Converts the planet into an §Y$pc_city$§!, boosting £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§!, and §YPop Growth§!. Unlocks special £district£ §YGarden Arcology Districts§!, but renders all natural resources §Rinaccessible§!, permanently disabling the construction of £district£ §YGenerator§!, §YMining§!, and §YAgriculture Districts§!. §YIndustrial Specializations§! and related buildings will be §Rremoved§! and §Rblocked§! from construction."
+ #Garden Districts
+ district_pd_garden_arcology_housing: "Eco-Spire Arcology"
+ district_pd_garden_arcology_housing_plural: "Eco-Spire Arcologies"
+ district_pd_garden_arcology_housing_desc: "These arcologies blend ecological harmony with urban sophistication, offering advanced infrastructure, vertical living, and expansive idyllic green spaces."
+ district_pd_garden_arcology_urban_1: "Nature Preserve"
+ district_pd_garden_arcology_urban_1_plural: "Nature Preserve"
+ district_pd_garden_arcology_urban_1_desc: "This expansive preserve is a meticulously curated ecosystem, designed to counterbalance the extreme urbanization of the ecumenopolis with vital ecological function and care."
+ district_pd_garden_arcology_urban_2: "Specialized Arcology 1"
+ district_pd_garden_arcology_urban_2_plural: "Specialized Arcology 1"
+ district_pd_garden_arcology_urban_2_desc: "$district_arcology_housing_desc$"
+ district_pd_garden_arcology_urban_3: "Specialized Arcology 2"
+ district_pd_garden_arcology_urban_3_plural: "Specialized Arcology 2"
+ district_pd_garden_arcology_urban_3_desc: "$district_arcology_housing_desc$"
+ mod_district_pd_garden_arcology_urban_1_max: "Max $district_pd_garden_arcology_urban_1_plural$"
+ #Zones
+ zone_pd_preserve: "The Preserve"
+ zone_pd_preserve_desc: "The Preserve is a delicate ecosystem, unsuited for industrial development and capable only of supporting low-impact structures dedicated to research, education, or entertainment."
+ #Jobs
+ job_pd_park_ranger: "Preserve Steward"
+ job_pd_park_ranger_plural: "Preserve Stewards"
+ job_pd_park_ranger_desc: "Highly specialzied botanists and landscape specialists who monitor biodiversity, guide ecological succession, and ensure the preserve's delicate balance is maintained amidst the pressures of surrounding urbanization."
+ mod_job_pd_park_ranger_add: "$job_pd_park_ranger$ Job"
+ mod_job_pd_park_ranger_per_pop: "§G+1§! $job_pd_park_ranger$ Job per $VALUE$ Pops"
+ mod_job_pd_park_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_park_ranger_add£ per $VALUE$ £pop£"
+ job_pd_park_ranger_effect_desc: "£job_pd_park_ranger£ $job_pd_park_ranger_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £society£ §YResearch Points§!, £unity£ §Y$unity$§! and £amenities£ §YAmenities§!."
+ ##Fortress Arc
+ #Tooltip
+ decision_miltary_arcology_project_effects: "Converts the planet into an §Y$pc_city$§!, boosting £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§!, and §YPop Growth§!. Unlocks special £district£ §YGarden Arcology Districts§!, but renders all natural resources §Rinaccessible§!, permanently disabling the construction of £district£ §YGenerator§!, §YMining§!, and §YAgriculture Districts§!. §YBureaucratic and Trade Specializations§! and related buildings will be §Rremoved§! and §Rblocked§! from construction."
+ #Districts
+ district_pd_fortress_arcology_housing: "Civil-Bastion Arcology"
+ district_pd_fortress_arcology_housing_plural: "Civil-Bastion Arcologies"
+ district_pd_fortress_arcology_housing_desc: "These arcologies embody the unity of military strength and civic life. Citizens thrive under constant protection, knowing their safety is secured by the state's vigilance."
+ district_pd_fortress_arcology_urban_1: "Command Nexus Arcology"
+ district_pd_fortress_arcology_urban_1_desc: "This arcology houses the strategic nerve center of this fortified world. Within, military administrators ensure that the authority of the armed forces is structured, deployed, and maintained with unwavering discipline."
+ district_pd_fortress_arcology_urban_1_plural: "Command Nexus Arcologies"
+ district_pd_fortress_arcology_urban_2: "Specialized Arcology 1"
+ district_pd_fortress_arcology_urban_2_desc: "$district_arcology_housing_desc$"
+ district_pd_fortress_arcology_urban_2_plural: "Specialized Arcology 1"
+ district_pd_fortress_arcology_urban_3: "Specialized Arcology 2"
+ district_pd_fortress_arcology_urban_3_desc: "$district_arcology_housing_desc$"
+ district_pd_fortress_arcology_urban_3_plural: "Specialized Arcology 2"
+ #Zones
+ zone_pd_command_nexus: "Nexus Headquarters"
+ zone_pd_command_nexus_desc: "The headquarters is the central organ of this planet's military administration, upholding the architecture of war through strategic planning, operational coordination, and uncompromising oversight."
+ ##Commerical
+ #Tooltip
+ decision_commercial_arcology_project_effects: "Converts the planet into an §Y$pc_city$§!, boosting £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§!, and §YPop Growth§!. Unlocks special £district£ §YGarden Arcology Districts§!, but renders all natural resources §Rinaccessible§!, permanently disabling the construction of £district£ §YGenerator§!, §YMining§!, and §YAgriculture Districts§!."
+ #Districts
+ district_pd_commercial_arcology_housing: "Retail Concourse Arcology"
+ district_pd_commercial_arcology_housing_desc: "These arcologies fuse upscale living with commerce, offering sleek towers above shopping promenades, spas and entertainment hubs. For those who can afford it, the concourse delivers an effortless and indulgent resort lifestyle."
+ district_pd_commercial_arcology_housing_plural: "Retail Concourse Arcologies"
+ district_pd_commercial_arcology_urban_1: "Central Exchange Arcology"
+ district_pd_commercial_arcology_urban_1_desc: "These arcologies centralize galactic commerce, hosting corporate offices, stock markets, shipping docks, and supply hubs to maintain a constant flow of goods and credits."
+ district_pd_commercial_arcology_urban_1_plural: "Central Exchange Arcology"
+ district_pd_commercial_arcology_urban_2: "Specialized Arcology 1"
+ district_pd_commercial_arcology_urban_2_desc: ""$district_arcology_housing_desc$"
+ district_pd_commercial_arcology_urban_2_plural: "Specialized Arcology 1"
+ district_pd_commercial_arcology_urban_3: "pecialized Arcology 2"
+ district_pd_commercial_arcology_urban_3_desc: ""$district_arcology_housing_desc$"
+ district_pd_commercial_arcology_urban_3_plural: "pecialized Arcology 2"
+ #Zones
+ zone_pd_trade_market: "Commercial Coordination Hub"
+ zone_pd_trade_market_desc: "This hub coordinates the planet's commercial activity, directing the movement of goods, services and data across every district."
+ #Modifier
+ mod_country_resource_max_trade_add: "Trade Storage Capacity"
 
