--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
@@ -1,31 +1,31 @@
 ﻿l_polish:
 
 #Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Expand Planetary Sea"
- decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
- decision_pd_aw_unflood_planet: "Unflood Planet"
- decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_ringworld: "Flood Ringworld"
- decision_pd_aw_flood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_unflood_ringworld: "Unflood Ringworld"
- decision_pd_aw_unflood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By lowering sea levels and moving cities back to land, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_unflood_habitat: "Unflood Habitat"
- decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
+ decision_pd_aw_flood_planet: "Poszerz morza planety"
+ decision_pd_aw_flood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Poprzez podniesienie poziomu mórz i przeniesienie miast pod wodę zapewnimy rozwój życia przystosowanego do głębin."
+ decision_pd_aw_flood_planet_tooltip: "Lód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§!\nDodany zostanie modyfikator §Y$pd_aw_flooded_planet$§!:\n$pd_aw_flooded_planet_tooltip$"
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNie-akwatyczni§! Możliwość zamieszkania: §R-20%§!"
+ decision_pd_aw_unflood_planet: "Osusz planetę"
+ decision_pd_aw_unflood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na wyspy, możemy zapewnić rozwój życia przystosowanego do lądu."
+ decision_pd_aw_flood_ringworld: "Zalej pierścień"
+ decision_pd_aw_flood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Poprzez podniesienie poziomu mórz i przeniesienie miast pod wodę zapewnimy rozwój życia przystosowanego do głębin."
+ decision_pd_aw_unflood_ringworld: "Osusz pierścień"
+ decision_pd_aw_unflood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na ląd, możemy zapewnić rozwój życia przystosowanego do lądu."
+ decision_pd_aw_unflood_habitat: "Osusz stację mieszkalną"
+ decision_pd_aw_unflood_habitat_desc: "Ten habitat ma potencjał, by stać się idealnym domem dla naszego ludu. Dzięki osuszeniu możemy zapewnić rozwój życia przystosowanego do lądu."
+ decision_pd_aw_flood_habitat_tooltip: "Zdatność do zamieszkania: §R-20%§!\nTraktowany jako świat §Yoceaniczny§! dla gatunków §YAkwatycznych§!.\nLód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§! w bazie gwiezdnej."
 
- flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+ flooded_habitat: "Zalana"
+ flooded_habitat_desc: "Pochłonięty przez wodę świat wiernie odzwierciedla idylliczne środowisko mieszkańców oceanicznych głębin."
+ pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNie-akwatyczni§! Możliwość zamieszkania: §R-20%§!"
 
- pd_aw_flooded_planet: "Flooded World"
- pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
- pd_aw_flooded_habitat: "Flooded Habitat"
- pd_aw_flooded_habitat_desc: "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
+ pd_aw_flooded_planet: "Świat zalany"
+ pd_aw_flooded_planet_desc: "Ta oceaniczna planeta jest idealnym domem dla gatunków wodnych. Życie rozkwita dla tych, którzy przystosowali się do głębin."
+ pd_aw_flooded_habitat: "Zalana stacja mieszkalna"
+ pd_aw_flooded_habitat_desc: "Ten habitat został wypełniony wodą, imitując naturalne środowisko istot wodnych."
 
- ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+ ICE_MINING_PLANET_SUCCESS_TITLE: "Planeta zalana"
+ ICE_MINING_PLANET_SUCCESS_DESC: "Dzięki wykorzystaniu lodu wydobytego w systemie $SYSTEM|Y$, udało nam się zalać §Y[This.GetName]§!."
 
  ocean_paradise_2: "$ocean_paradise$"
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
