--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
@@ -13,7 +13,7 @@
  decision_pd_aw_unflood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na ląd, możemy zapewnić rozwój życia przystosowanego do lądu."
  decision_pd_aw_unflood_habitat: "Osusz stację mieszkalną"
  decision_pd_aw_unflood_habitat_desc: "Ten habitat ma potencjał, by stać się idealnym domem dla naszego ludu. Dzięki osuszeniu możemy zapewnić rozwój życia przystosowanego do lądu."
- decision_pd_aw_flood_habitat_tooltip: "Zdatność do zamieszkania: §R-20%§!\nTraktowany jako świat §Yoceaniczny§! dla gatunków §YAkwatycznych§!.\nLód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§! w bazie gwiezdnej."
+ decision_pd_aw_flood_habitat_tooltip: "Możliwość zamieszkania: §R-20%§!\nTraktowany jako świat §Yoceaniczny§! dla gatunków §YAkwatycznych§!.\nLód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§! w bazie gwiezdnej."
 
  flooded_habitat: "Zalana"
  flooded_habitat_desc: "Pochłonięty przez wodę świat wiernie odzwierciedla idylliczne środowisko mieszkańców oceanicznych głębin."
