--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
@@ -13,15 +13,15 @@
  decision_pd_aw_unflood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na ląd, możemy zapewnić rozwój życia przystosowanego do lądu."
  decision_pd_aw_unflood_habitat: "Osusz stację mieszkalną"
  decision_pd_aw_unflood_habitat_desc: "Ten habitat ma potencjał, by stać się idealnym domem dla naszego ludu. Dzięki osuszeniu możemy zapewnić rozwój życia przystosowanego do lądu."
- decision_pd_aw_flood_habitat_tooltip: "Możliwość zamieszkania: §R-20%§!\nTraktowany jako świat §Yoceaniczny§! dla gatunków §YAkwatycznych§!.\nLód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§! w bazie gwiezdnej."
+ decision_pd_aw_flood_habitat_tooltip: "Możliwość zamieszkania: §R-20%§!\nTraktowany jako świat §Yoceaniczny§! dla gatunków §YAkwatyków§!.\nLód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§! w bazie gwiezdnej."
 
- flooded_habitat: "Zalana"
+ flooded_habitat: "Wodna"
  flooded_habitat_desc: "Pochłonięty przez wodę świat wiernie odzwierciedla idylliczne środowisko mieszkańców oceanicznych głębin."
  pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNie-akwatyczni§! Możliwość zamieszkania: §R-20%§!"
 
- pd_aw_flooded_planet: "Świat zalany"
+ pd_aw_flooded_planet: "Świat wodny"
  pd_aw_flooded_planet_desc: "Ta oceaniczna planeta jest idealnym domem dla gatunków wodnych. Życie rozkwita dla tych, którzy przystosowali się do głębin."
- pd_aw_flooded_habitat: "Zalana stacja mieszkalna"
+ pd_aw_flooded_habitat: "Wodna stacja mieszkalna"
  pd_aw_flooded_habitat_desc: "Ten habitat został wypełniony wodą, imitując naturalne środowisko istot wodnych."
 
  ICE_MINING_PLANET_SUCCESS_TITLE: "Planeta zalana"
