--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_l_polish.yml
@@ -1,12 +1,12 @@
 ﻿l_polish:
 
 #Terraforming Warning
- pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
+ pd_planet_no_terraform: "$TRIGGER_FAIL$ Tej planety nie można terraformować standardowymi metodami."
 
 ###Arcology/Relic
- pc_pd_nuked_arcology: "Nuked Relic World"
- pc_pd_nuked_arcology_desc: "A city once stretched across this entire world. It is experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation. Minimal signs of life."
- pc_pd_nuked_arcology_tooltip: "Habitability: §R-100%§!\nHabitability: §G+100%§! with §Y$trait_pc_nuked_preference$§! or §Y$trait_survivor$§! trait"
+ pc_pd_nuked_arcology: "Świat postnuklearny reliktowy"
+ pc_pd_nuked_arcology_desc: "Kiedyś całe to miejsce pokrywało miasto. Teraz planeta pogrążona jest w nuklearnej zimie – gęste warstwy sadzy i aerozoli zalegają w atmosferze, poziom promieniowania na powierzchni jest wysoki. Ledwo widoczne są jakiekolwiek oznaki życia."
+ pc_pd_nuked_arcology_tooltip: "Możliwość zamieszkania: §R-100%§!\nMożliwość zamieszkania dla gatunków z cechą §Y$trait_pc_nuked_preference$§! lub §Y$trait_survivor$§!: §G+100%§! "
 
 ###Dummy Class Warning
  DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
