--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_flooded_l_polish.yml
@@ -7,9 +7,9 @@
  flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNie-akwatyczni§! Możliwość zamieszkania: §R-20%§!"
  decision_pd_aw_unflood_planet: "Osusz planetę"
  decision_pd_aw_unflood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na wyspy, możemy zapewnić rozwój życia przystosowanego do lądu."
- decision_pd_aw_flood_ringworld: "Zalej pierścień"
+ decision_pd_aw_flood_ringworld: "Zalej świat pierścieniowy"
  decision_pd_aw_flood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Poprzez podniesienie poziomu mórz i przeniesienie miast pod wodę zapewnimy rozwój życia przystosowanego do głębin."
- decision_pd_aw_unflood_ringworld: "Osusz pierścień"
+ decision_pd_aw_unflood_ringworld: "Osusz świat pierścieniowy"
  decision_pd_aw_unflood_ringworld_desc: "Ten świat pierścieniowy ma potencjał, by stać się idealnym domem dla naszego ludu. Obniżając poziom mórz i przenosząc miasta na ląd, możemy zapewnić rozwój życia przystosowanego do lądu."
  decision_pd_aw_unflood_habitat: "Osusz stację mieszkalną"
  decision_pd_aw_unflood_habitat_desc: "Ten habitat ma potencjał, by stać się idealnym domem dla naszego ludu. Dzięki osuszeniu możemy zapewnić rozwój życia przystosowanego do lądu."
