--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_shroud_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_shroud_l_polish.yml
@@ -2,29 +2,29 @@
 
 ###Shroud Planets
 #AP
- ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "The barriers between the mortal realm and the Shroud are thinner than expected. Concentrating our psionic energy, we can further weaken these barriers and create worlds that span both dimensions."
- allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_LOGISTIC_GROWTH_MULT$: §R-25%§"
+ap_pd_shroud_worlds: "Fazowanie Woalu"
+ap_pd_shroud_worlds_desc: "Bariery między światem śmiertelników a Woalem są cieńsze, niż się spodziewaliśmy. Koncentrując naszą energię psioniczną, możemy dodatkowo osłabić te bariery i tworzyć światy obejmujące oba wymiary."
+allow_shroud_worlds: "§YOdblokowuje decyzję:§! $decision_pd_aw_shroud_planet$"
+describe_shroud_worlds: "§YModyfikator $decision_pd_aw_shroud_planet$§!:\n$t$- §GPsioniczne§! £pop£ Populacje:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNie-psioniczne§! £pop£ Populacje:\n- £mod_pop_environment_tolerance£ §YMożliwość zamieszkania planety§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_LOGISTIC_GROWTH_MULT$: §R-25%§"
 
 #Decisions
- decision_pd_aw_shroud_planet: "Shroud Phasing"
- decision_pd_aw_shroud_planet_desc: "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
- decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
- decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
+decision_pd_aw_shroud_planet: "Fazowanie Woalu"
+decision_pd_aw_shroud_planet_desc: "Możemy osłabić barierę między tą planetą a Woalem, tworząc równowagę między światem materialnym a sferą psioniczną."
+decision_pd_aw_shroud_planet_effects_short: "Dodaje modyfikator §Y$pd_aw_shroud_planet$§!.\n\nZwiększa £pop£ §Gprzyrost populacji psionicznych§!, ale zmniejsza £pop£ §Yprzyrost populacji nie-psionicznych§!."
+decision_pd_aw_shroud_planet_cleanup: "Zablokuj fazowanie planety"
+decision_pd_aw_shroud_planet_cleanup_desc: "Nasi fizycy mogą wzmocnić barierę między tą planetą a Woalem, zakotwiczając ją w świecie materialnym."
+decision_pd_aw_shroud_planet_cleanup_tooltip: "\nUsuniemy wpływ psioniczny z tej planety."
 
 #Modifiers
- pd_aw_shroud_planet: "Shroud Touched"
- pd_aw_shroud_planet_desc: "In this place, the deliberately weakened barrier between the material realm and the Shroud has enabled individuals with psychic abilities to reshape reality to a certain extent. However, for those without such gifts, the line between nightmare and reality blurs, giving rise to an endless tapestry of suffering and torment."
- pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_LOGISTIC_GROWTH_MULT$: §R-25%§!"
- pd_shroud_planet: "$pd_aw_shroud_planet$"
- pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
- pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
+pd_aw_shroud_planet: "Dotknięta Woalem"
+pd_aw_shroud_planet_desc: "W tym miejscu celowo osłabiona bariera między światem materialnym a Woalem pozwoliła jednostkom obdarzonym zdolnościami psionicznymi w pewnym stopniu kształtować rzeczywistość. Jednak dla tych, którzy nie posiadają takich darów, granica między koszmarem a rzeczywistością zaciera się, rodząc nieskończoną mozaikę cierpienia i udręki."
+pd_aw_shroud_planet_tooltip: "§GPsioniczne§! £pop£ Populacje:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNie-psioniczne§! £pop£ Populacje:\n- £mod_pop_environment_tolerance£ §YMożliwość zamieszkania planet§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_LOGISTIC_GROWTH_MULT$: §R-25%§!"
+pd_shroud_planet: "$pd_aw_shroud_planet$"
+pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
+pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
 
 #Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
- MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
- MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet Unshrouded"
+MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ jest teraz §Y$pd_aw_shroud_planet$§!"
+MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetarna komunia Woalu ukończona"
+MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "Wpływ Woalu został usunięty na $PLANET|Y$."
+MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planeta odłączona od Woalu"
