--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_necro_l_polish.yml
@@ -40,56 +40,56 @@
  trait_pc_pd_necro_shroud_relic_preference_desc: "$DO_NOT_USE$"
 
 #Decision
- decision_pd_aw_necro_planet: "Build Planetary Necropolis"
- decision_pd_aw_necro_planet_desc: "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- decision_pd_aw_necro_planet_effects_short: "§Y$district_pd_aw_necro$§! modifier added.\nConstruction of §Y$district_farming_plural$§! replaced with §G$district_pd_aw_necro_plural$§!"
- decision_pd_aw_necro_planet_cleanup: "Remove Planetary Necropolis"
- decision_pd_aw_necro_planet_cleanup_desc: "We must remove the temples and tombs left behind by this planet's previous owners."
- decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§! modifier will be removed."
+ decision_pd_aw_necro_planet: "Zbuduj planetarną nekropolię"
+ decision_pd_aw_necro_planet_desc: "Ten świat pragnie stać się rozległą świątynią, w której rozbrzmiewają echa naszego dziedzictwa o wiecznym znaczeniu."
+ decision_pd_aw_necro_planet_effects_short: "Dodaje modyfikator §Y$district_pd_aw_necro$§!.\nBudowa §Y$district_farming_plural$§! zostaje zastąpiona przez §G$district_pd_aw_necro_plural$§!"
+ decision_pd_aw_necro_planet_cleanup: "Usuń planetarną nekropolię"
+ decision_pd_aw_necro_planet_cleanup_desc: "Musimy usunąć świątynie i grobowce pozostawione przez poprzednich właścicieli tej planety."
+ decision_pd_aw_necro_planet_cleanup_effects_short: "Modyfikator §Y$pd_aw_necro_planet$§! zostanie usunięty."
 
 #Modifiers
- pd_aw_necro_planet: "Necropolis"
- pd_aw_necro_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_aw_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_aw_necro_planet: "Nekropolia"
+ pd_aw_necro_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_aw_necro_planet_desc: "Ten świat to rozległa świątynia, a jego powierzchnia rozbrzmiewa echami wiecznego znaczenia."
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
- pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet: "Necropolis"
- pd_necro_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_necro_planet: "Nekropolia"
+ pd_necro_planet_tooltip: "£unity£ $unity$ od [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_necro_planet_desc: "Ten świat to rozległa świątynia, a jego powierzchnia rozbrzmiewa echami wiecznego znaczenia."
 
 #Acension Perk
- ap_pd_necro_worlds: "Necro Worlds"
- ap_pd_necro_worlds_desc: "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- allow_necro_worlds: "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
- describe_necro_worlds: "Unlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
+ ap_pd_necro_worlds: "Światy nekropolii"
+ ap_pd_necro_worlds_desc: "Nasze światy pragną stać się rozległymi świątyniami, w których rozbrzmiewają echa naszego dziedzictwa o wiecznym znaczeniu."
+ allow_necro_worlds: "§HOdblokowuje decyzję:§! $decision_pd_aw_necro_planet$"
+ describe_necro_worlds: "Odblokowuje broń Kolosa §YPromień nekrozy planetarnej§! §R(wymaga Korzyści z rozwoju §Y$ap_colossus$§!)§!."
 
 #Necropolis District
- district_pd_aw_necro: "Necropolis District"
- district_pd_aw_necro_plural: "Necropolis Districts"
- district_pd_aw_necro_desc: "A testament to our legacy, these spires hold the key to our eternal significance."
- district_rw_pd_aw_necro: "Necropolis Segment"
- district_rw_pd_aw_necro_desc: "A testament to our legacy, endless spires stretch across this Ring World section. They hold the key to our eternal significance."
- district_rw_pd_aw_necro_plural: "Necropolis Segments"
+ district_pd_aw_necro: "Dzielnica nekropolii"
+ district_pd_aw_necro_plural: "Dzielnice nekropolii"
+ district_pd_aw_necro_desc: "Świadectwo naszego dziedzictwa, te wieże kryją klucz do naszego wiecznego znaczenia."
+ district_rw_pd_aw_necro: "Segment nekropolii"
+ district_rw_pd_aw_necro_desc: "Świadectwo naszego dziedzictwa, nieskończone wieże rozciągają się w tej sekcji Świata pierścieniowego. Kryją klucz do naszego wiecznego znaczenia."
+ district_rw_pd_aw_necro_plural: "Segmenty nekropolii"
 
 #Notification Message
- MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§!"
- MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
- MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
- MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
+ MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ jest teraz §Y$pd_aw_necro_planet$§!"
+ MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetarna nekropolia ukończona"
+ MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "Planetarna nekropolia na $PLANET|Y$ została usunięta."
+ MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Nekropolia usunięta"
 
 #Necro Planet Cracker
- PLANET_KILLER_PD_NECRO_RAY: "Planet Necrosis Beam"
- PLANET_KILLER_PD_NECRO_RAY_DESC: "A spectral tide of nanobots shall cascade upon this world, obliterating robotics and silencing any higher functions of the living. In its wake, a Necropolis shall rise across the landscape."
- PLANET_KILLER_PD_NECRO_RAY_ACTION: "Necromance"
- FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "Preparing to necromance $PLANET|Y$"
- MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "was subjected to a necrotic transformation by"
- pd_necro_ray.02.name: "Planet Necromancy"
- pd_necro_ray.02.desc: "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
- pd_necro_ray.02.tooltip: "The planet becomes an §Y$pd_aw_necro_planet$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
- is_not_necro: "§R$TRIGGER_FAIL$Target is already a §Y$pd_aw_necro_planet$§!§!"
- will_purge_robots_and_zombie: "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
- opinion_pd_necro_a_world: "Necromanced a World"
- opinion_pd_necro_my_world: "Necromanced our World"
- opinion_pd_necro_a_primitive_world: "Necromanced a Primitive World"
+ PLANET_KILLER_PD_NECRO_RAY: "Promień nekrozy planetarnej"
+ PLANET_KILLER_PD_NECRO_RAY_DESC: "Spektralna fala nanobotów spłynie na ten świat, unicestwiając robotykę i wyciszając wyższe funkcje żywych istot. W jej następstwie na powierzchni wzniesie się nekropolia."
+ PLANET_KILLER_PD_NECRO_RAY_ACTION: "Nekromancja"
+ FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "Przygotowania do nekromancji $PLANET|Y$"
+ MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "został poddany nekrotycznej transformacji przez"
+ pd_necro_ray.02.name: "Nekromancja planety"
+ pd_necro_ray.02.desc: "Gdy kolumna nanobotów opadająca z [FromFrom.GetName] rozprasza się, powierzchnia [From.GetName] ulega całkowitej transformacji. Teraz istnieje tu tylko nekropolia."
+ pd_necro_ray.02.tooltip: "Planeta staje się §Y$pd_aw_necro_planet$§!.\nWszystkie populacje robotów zostaną zniszczone, a biologiczne populacje otrzymają cechę §Y$trait_zombie$§!."
+ is_not_necro: "§R$TRIGGER_FAIL$Cel jest już §Y$pd_aw_necro_planet$§!§!"
+ will_purge_robots_and_zombie: "§RPopulacje robotów zostaną zniszczone, a biologiczne populacje otrzymają cechę §Y$trait_zombie$§!§!"
+ opinion_pd_necro_a_world: "Przeprowadzono nekromancję na świecie"
+ opinion_pd_necro_my_world: "Przeprowadzono nekromancję na naszym świecie"
+ opinion_pd_necro_a_primitive_world: "Przeprowadzono nekromancję na prymitywnym świecie"
  opinion_pd_necro_a_primitive_world_phile: "$opinion_cracked_a_primitive_world_phile$"
