--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_wasteland_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_wasteland_l_polish.yml
@@ -2,29 +2,29 @@
 
 ###Wasteland Planets
 #AP
- ap_pd_wasteland_worlds: "Unregulated Industrialism"
- ap_pd_wasteland_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_wasteland_worlds: "§YUnlocks Decision:§! $decision_pd_aw_wasteland_planet$ on non-ideal planets"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! modifier:\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!"
+ ap_pd_wasteland_worlds: "Nieuregulowany industrializm"
+ ap_pd_wasteland_worlds_desc: "W dążeniu do nieograniczonej produktywności musimy odrzucić ograniczenia środowiskowe, aby odblokować prawdziwy przemysłowy potencjał planety."
+ allow_wasteland_worlds: "§YOdblokowuje decyzję:§! $decision_pd_aw_wasteland_planet$ na planetach nieoptymalnych"
+ describe_wasteland_worlds: "Modyfikator §Y$decision_pd_aw_wasteland_planet$§!:\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!"
 
 #Decisions
- decision_pd_aw_wasteland_planet: "Unregulated Industrial Standards"
- decision_pd_aw_wasteland_planet_desc: "Environmental concerns do nothing but hold us back. By ignoring the state of the planet's natural ecosystem, we will unlock the planet's true industrial potential."
- decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! modifier added.\n\nIncreases §GIndustrial Output§! but reduces £mod_pop_environment_tolerance£ §RHabitability§!."
- decision_pd_aw_wasteland_planet_cleanup: "Environmental Clean Up"
- decision_pd_aw_wasteland_planet_cleanup_desc: "The severe environmental degradation on this planet has left its ecosystem in a precarious state. We will rectify the damage inflicted upon this world."
- decision_pd_aw_wasteland_planet_cleanup_tooltip: "We will restore this planet's original ecosystem."
+ decision_pd_aw_wasteland_planet: "Nieuregulowane standardy przemysłowe"
+ decision_pd_aw_wasteland_planet_desc: "Troska o środowisko nie robi nic poza powstrzymywaniem nas. Ignorując stan naturalnego ekosystemu planety, odblokujemy jej prawdziwy przemysłowy potencjał."
+ decision_pd_aw_wasteland_planet_effects_short: "Dodaje modyfikator §Y$pd_aw_wasteland_planet$§!.\n\nZwiększa §GProdukcję przemysłową§!, ale zmniejsza £mod_pop_environment_tolerance£ §RMożliwość zamieszkania§!."
+ decision_pd_aw_wasteland_planet_cleanup: "Oczyszczenie środowiska"
+ decision_pd_aw_wasteland_planet_cleanup_desc: "Poważna degradacja środowiska na tej planecie pozostawiła jej ekosystem w niepewnym stanie. Naprawimy szkody wyrządzone temu światu."
+ decision_pd_aw_wasteland_planet_cleanup_tooltip: "Przywrócimy pierwotny ekosystem tej planety."
 
 #Modifiers
- pd_aw_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet: "Przemysłowe pustkowie"
  pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
- pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!"
- pd_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet_tooltip: "Odblokowuje £district£ §Ydzielnice produkujące energię§! i §Ygórnicze§!"
+ pd_wasteland_planet: "Przemysłowe pustkowie"
  pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
- pd_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!"
+ pd_wasteland_planet_tooltip: "Odblokowuje £district£ §Ydzielnice produkujące energię§! i §Ygórnicze§!"
 
 #Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
- MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Environmental Regulations Abolished"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
- MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Environmental Regulations Returned"
+ MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ posiada teraz §Y$decision_pd_aw_wasteland_planet$§!"
+ MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Zniesiono regulacje środowiskowe"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "Ekosystem na $PLANET|Y$ został naprawiony."
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Przywrócono regulacje środowiskowe"
